--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -1,1 +1,12 @@
-<h1>Projeto REFAM</h1>
+<section class="container ">
+    <article class="mt-5 pt-4 row">
+        <div class="col-sm-5">
+
+            <h1 class="">Transformando vidas, <br> construindo futuros. <br>Juntos pela comunidade!</h1>
+            <p class="pt-4">O REFAM tem como intuito ajudar... To sem ideia agora</p>
+        </div>
+        <figure class="col-sm-3">
+            <img src="./assets/img/foto1.jpg" width="500" height="500" alt="">
+        </figure>
+    </article>
+</section>
