--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -27,8 +27,9 @@
       <a
         data-mdb-ripple-init
         class="btn btn-link btn-floating btn-lg text-body m-1"
-        href="#!"
+        href="https://www.google.com/search?client=opera-gx&q=instituto+refam&sourceid=opera&ie=UTF-8&oe=UTF-8"
         role="button"
+        target="_blank"
         data-mdb-ripple-color="dark"
         ><i class="fab fa-google"></i
       ></a>
