--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="text-center fixed-bottom verde-musgo">
+<footer class="text-center verde-musgo">
   <!-- Grid container -->
   <div class="container pt-4">
     <!-- Section: Social media -->
