--- a/src/app/home/sobre/sobre.component.css
+++ b/src/app/home/sobre/sobre.component.css
@@ -14,3 +14,8 @@ img:hover, img:focus {
 h1 {
     font-family: 'Lilita One', sans-serif;
 }
+
+section {
+    min-height: 82.9vh;
+    margin: 0 auto -50px;
+}
