--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -1,4 +1,4 @@
-<section class="container ">
+<section class="container d-flex flex-column position-relative ">
     <article class="mt-5 pt-4 row">
         <div class="col-sm-5">
 
