--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
+html {
+    height: 100%;
+}
 
 body {
+    min-height: 100%;
+    display: grid;
     background: linear-gradient(90deg, rgb(121, 204, 255), rgb(82, 82, 255));
+    grid-template-rows: 1fr auto;
 }
