--- a/src/app/home/sobre/sobre.component.css
+++ b/src/app/home/sobre/sobre.component.css
@@ -15,7 +15,8 @@ h1 {
     font-family: 'Lilita One', sans-serif;
 }
 
-section {
+.primeira {
     min-height: 82.9vh;
     margin: 0 auto -50px;
 }
+
