--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -1,4 +1,4 @@
-<section class="container d-flex flex-column position-relative ">
+<section class="container d-flex flex-column position-relative primeira">
     <article class="mt-5 pt-4 row">
         <div class="col-sm-5">
 
@@ -8,5 +8,13 @@
         <figure class="col-sm-3">
             <img src="./assets/img/foto1.jpg" width="500" height="500" alt="">
         </figure>
+    </article>
+</section>
+
+<section>
+    <article>
+        <h1 class="text-center pb-2">
+            algumas atividades do REFAM
+        </h1>
     </article>
 </section>
