adicionei as imagens na lista de atividades

--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -5,7 +5,7 @@
             <h1 class="">Transformando vidas, <br> construindo futuros. <br>Juntos pela comunidade!</h1>
             <p class="pt-4">O REFAM tem como intuito ajudar... To sem ideia agora</p>
         </div>
-        <figure class="col-sm-3">
+        <figure class="col-sm-3 primeira-imagem">
             <img src="./assets/img/foto1.jpg" width="500" height="500" alt="">
         </figure>
     </article>
@@ -16,5 +16,47 @@
         <h1 class="text-center pb-2">
             algumas atividades do REFAM
         </h1>
+        <div class="container mt-5">
+            <div class="row col-12">
+                <ul class="list-inline d-flex justify-content-center">
+        
+                    <li class="list-inline-item pe-5">
+                        <div class="d-flex flex-column align-items-center">
+                            <figure class="pb-3">
+                                <img src="./assets/img/Xadrex.jpg" width="200" height="200" alt="">
+                            </figure>
+                            <span>Xadrex</span>
+                        </div>
+                    </li>
+        
+                    <li class="list-inline-item pe-5">
+                        <div class="d-flex flex-column align-items-center">
+                            <figure class="pb-3">
+                                <img src="./assets/img/jui-jutsu.jpg" width="200" height="200" alt="">
+                            </figure>
+                            <span>jiu-jitsu</span>
+                        </div>
+                    </li>
+        
+                    <li class="list-inline-item pe-5">
+                        <div class="d-flex flex-column align-items-center">
+                            <figure class="pb-3">
+                                <img src="./assets/img/psicologo.jpg" width="200" height="200" alt="">
+                            </figure>
+                            <span>Psicologo</span>
+                        </div>
+                    </li>
+        
+                    <li class="list-inline-item">
+                        <div class="d-flex flex-column align-items-center">
+                            <figure class="pb-3">
+                                <img src="./assets/img/doacoes.jpg" width="200" height="200" alt="">
+                            </figure>
+                            <span>Doações</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </article>
 </section>
