add texto de resumo

--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -3,7 +3,7 @@
         <div class="col-sm-5">
 
             <h1 class="">Transformando vidas, <br> construindo futuros. <br>Juntos pela comunidade!</h1>
-            <p class="pt-4">O REFAM tem como intuito ajudar... To sem ideia agora</p>
+            <p class="pt-4">O Instituto de Assistência Comunitária, estabelecido em 2020, é dedicado a apoiar aqueles enfrentando dificuldades, com foco em alimentação e famílias afetadas pelo uso de drogas. Oferece ajuda alimentar e suporte emocional. Além disso, promove o desenvolvimento infantil por meio de atividades como aulas de xadrez e jiu-jitsu, buscando criar uma comunidade resiliente desde sua fundação, impactando positivamente vidas.</p>
         </div>
         <figure class="col-sm-3 primeira-imagem">
             <img src="./assets/img/foto1.jpg" width="500" height="500" alt="">
