--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -1,12 +1,11 @@
 <section class="container d-flex flex-column position-relative primeira">
     <article class="mt-5 pt-4 row">
-        <div class="col-sm-5">
-
+        <div class="col-md-5 text-center"> <!-- Substitua col-sm-5 por col-md-5 e adicione text-center -->
             <h1 class="">Transformando vidas, <br> construindo futuros. <br>Juntos pela comunidade!</h1>
             <p class="pt-4">O Instituto de Assistência Comunitária, estabelecido em 2020, é dedicado a apoiar aqueles enfrentando dificuldades, com foco em alimentação e famílias afetadas pelo uso de drogas. Oferece ajuda alimentar e suporte emocional. Além disso, promove o desenvolvimento infantil por meio de atividades como aulas de xadrez e jiu-jitsu, buscando criar uma comunidade resiliente desde sua fundação, impactando positivamente vidas.</p>
         </div>
-        <figure class="col-sm-3 primeira-imagem">
-            <img src="./assets/img/foto1.jpg" width="500" height="500" alt="">
+        <figure class="col-md-3 primeira-imagem image-fluid"> <!-- Substitua col-sm-3 por col-md-3 -->
+            <img id="efeito-imagem" src="./assets/img/foto1.jpg" width="500" height="500" alt="">
         </figure>
     </article>
 </section>
@@ -14,43 +13,42 @@
 <section>
     <article>
         <h1 class="text-center pb-2">
-            algumas atividades do REFAM
+            Algumas atividades do REFAM
         </h1>
         <div class="container mt-5">
-            <div class="row col-12">
-                <ul class="list-inline d-flex justify-content-center">
-        
+            <div class="row">
+                <ul class="list-inline d-flex justify-content-center flex-wrap"> <!-- Adicione flex-wrap para garantir que os itens se ajustem em dispositivos menores -->
                     <li class="list-inline-item pe-5">
                         <div class="d-flex flex-column align-items-center">
                             <figure class="pb-3">
-                                <img src="./assets/img/Xadrex.jpg" width="200" height="200" alt="">
+                                <img id="efeito-imagem" src="./assets/img/Xadrex.jpg" width="200" height="200" alt="">
                             </figure>
-                            <span>Xadrex</span>
+                            <span>Xadrez</span>
                         </div>
                     </li>
-        
+
                     <li class="list-inline-item pe-5">
                         <div class="d-flex flex-column align-items-center">
                             <figure class="pb-3">
-                                <img src="./assets/img/jui-jutsu.jpg" width="200" height="200" alt="">
+                                <img id="efeito-imagem" src="./assets/img/jui-jutsu.jpg" width="200" height="200" alt="">
                             </figure>
-                            <span>jiu-jitsu</span>
+                            <span>Jiu-Jitsu</span>
                         </div>
                     </li>
-        
+
                     <li class="list-inline-item pe-5">
                         <div class="d-flex flex-column align-items-center">
                             <figure class="pb-3">
-                                <img src="./assets/img/psicologo.jpg" width="200" height="200" alt="">
+                                <img id="efeito-imagem" src="./assets/img/psicologo.jpg" width="200" height="200" alt="">
                             </figure>
-                            <span>Psicologo</span>
+                            <span>Psicólogo</span>
                         </div>
                     </li>
-        
+
                     <li class="list-inline-item">
                         <div class="d-flex flex-column align-items-center">
                             <figure class="pb-3">
-                                <img src="./assets/img/doacoes.jpg" width="200" height="200" alt="">
+                                <img id="efeito-imagem" src="./assets/img/doacoes.jpg" width="200" height="200" alt="">
                             </figure>
                             <span>Doações</span>
                         </div>
@@ -59,4 +57,51 @@
             </div>
         </div>
     </article>
+</section>
+
+<section>
+    <h3 class="text-center pt-4 pb-4 mt-4 position-relative">
+        Durante alguns anos viemos ajudando os familiares do Novo Gama
+    </h3>
+
+    <div class="container d-flex justify-content-center align-items-center pb-3 mb-4">
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner rounded-4">
+              <div class="carousel-item active">
+                <img src="./assets/img/carrossel/carrossel.jpg" width="500px" height="700px" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/img/carrossel/carrossel2.jpg" width="500px" height="700px" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/img/carrossel/carrossel3.jpg" width="500px" height="700px" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </div>
 </section>
