--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
                   <a class="nav-link active" aria-current="page" href="#">Sobre</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="#">Contatos</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#">Pricing</a>
