coloquei nome nas img pros cegos l

--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -5,7 +5,7 @@
             <p class="pt-4">O Instituto de Assistência Comunitária, estabelecido em 2020, é dedicado a apoiar aqueles enfrentando dificuldades, com foco em alimentação e famílias afetadas pelo uso de drogas. Oferece ajuda alimentar e suporte emocional. Além disso, promove o desenvolvimento infantil por meio de atividades como aulas de xadrez e jiu-jitsu, buscando criar uma comunidade resiliente desde sua fundação, impactando positivamente vidas.</p>
         </div>
         <figure class="col-md-3 primeira-imagem image-fluid"> <!-- Substitua col-sm-3 por col-md-3 -->
-            <img id="efeito-imagem" src="./assets/img/foto1.jpg" width="500" height="500" alt="">
+            <img id="efeito-imagem" src="./assets/img/foto1.jpg" width="500" height="500" alt="foto da galera do REFAM">
         </figure>
     </article>
 </section>
@@ -21,7 +21,7 @@
                     <li class="list-inline-item pe-5">
                         <div class="d-flex flex-column align-items-center">
                             <figure class="pb-3">
-                                <img id="efeito-imagem" src="./assets/img/Xadrex.jpg" width="200" height="200" alt="">
+                                <img id="efeito-imagem" src="./assets/img/Xadrex.jpg" width="200" height="200" alt="Xadrex">
                             </figure>
                             <span>Xadrez</span>
                         </div>
@@ -30,7 +30,7 @@
                     <li class="list-inline-item pe-5">
                         <div class="d-flex flex-column align-items-center">
                             <figure class="pb-3">
-                                <img id="efeito-imagem" src="./assets/img/jui-jutsu.jpg" width="200" height="200" alt="">
+                                <img id="efeito-imagem" src="./assets/img/jui-jutsu.jpg" width="200" height="200" alt="jiu-jitsu">
                             </figure>
                             <span>Jiu-Jitsu</span>
                         </div>
@@ -39,7 +39,7 @@
                     <li class="list-inline-item pe-5">
                         <div class="d-flex flex-column align-items-center">
                             <figure class="pb-3">
-                                <img id="efeito-imagem" src="./assets/img/psicologo.jpg" width="200" height="200" alt="">
+                                <img id="efeito-imagem" src="./assets/img/psicologo.jpg" width="200" height="200" alt="psicologo">
                             </figure>
                             <span>Psicólogo</span>
                         </div>
@@ -48,7 +48,7 @@
                     <li class="list-inline-item">
                         <div class="d-flex flex-column align-items-center">
                             <figure class="pb-3">
-                                <img id="efeito-imagem" src="./assets/img/doacoes.jpg" width="200" height="200" alt="">
+                                <img id="efeito-imagem" src="./assets/img/doacoes.jpg" width="200" height="200" alt="Doações">
                             </figure>
                             <span>Doações</span>
                         </div>
