adicionei um novo componente de cursos que esta ainda em andamento

--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -15,7 +15,7 @@
         <h1 class="text-center pb-2">
             Algumas atividades do REFAM
         </h1>
-        <div class="container mt-5">
+        <div class="container my-5">
             <div class="row">
                 <ul class="list-inline d-flex justify-content-center flex-wrap"> <!-- Adicione flex-wrap para garantir que os itens se ajustem em dispositivos menores -->
                     <li class="list-inline-item pe-5">
