--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -8,7 +8,23 @@
             <img class="rounded-5" src="./assets/img/cursos/hidraulica.jpg" width="350px" height="350px" alt="">
         </figure>
         <div class="col-6"> 
-               texto aleatorio que ainda vou criar
+               <h4 class="pt-5 mt-4 text-center">
+                Instalações Hidráulicas
+               </h4>
+               <p class="pt-3 text-center">
+                Em agosto de 2022, na vibrante cidade de Novo Gama (GO), inauguramos um curso especializado em instalações hidráulicas, oferecendo uma jornada enriquecedora para todos os participantes. Durante esse curso abrangente, os alunos adquiriram habilidades valiosas, dominando técnicas cruciais, como manipulação de água fria e quente, instalação de tubulações de cobre, CPVC e PPR. Além disso, capacitaram-se na leitura básica de projetos, garantindo uma formação completa e pronta para os desafios do setor. Junte-se a nós para construir um futuro sólido e sustentável na área das instalações hidráulicas.
+               </p>
+        </div>
+        <figure class="pt-5 ps-5 ms-3 mt-4 col-4">
+            <img class="rounded-5" src="./assets/img/cursos/hidraulica.jpg" width="350px" height="350px" alt="">
+        </figure>
+        <div class="col-6"> 
+               <h4 class="pt-5 mt-4 text-center">
+                Instalações Hidráulicas
+               </h4>
+               <p class="pt-3 text-center">
+                Em agosto de 2022, na vibrante cidade de Novo Gama (GO), inauguramos um curso especializado em instalações hidráulicas, oferecendo uma jornada enriquecedora para todos os participantes. Durante esse curso abrangente, os alunos adquiriram habilidades valiosas, dominando técnicas cruciais, como manipulação de água fria e quente, instalação de tubulações de cobre, CPVC e PPR. Além disso, capacitaram-se na leitura básica de projetos, garantindo uma formação completa e pronta para os desafios do setor. Junte-se a nós para construir um futuro sólido e sustentável na área das instalações hidráulicas.
+               </p>
         </div>
     </article>
 </section>
