--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -1,30 +1,69 @@
 <section class="container">
     <article class="row">
-        <h3 class="text-center my-5 col-12">
-            Explorando horizontes e construindo futuros através de nossos cursos transformadores
-        </h3>
-
-        <figure class="pt-5 ps-5 ms-3 mt-4 col-4">
-            <img class="rounded-5" src="./assets/img/cursos/hidraulica.jpg" width="350px" height="350px" alt="">
-        </figure>
-        <div class="col-6"> 
-               <h4 class="pt-5 mt-4 text-center">
-                Instalações Hidráulicas
-               </h4>
-               <p class="pt-3 text-center">
-                Em agosto de 2022, na vibrante cidade de Novo Gama (GO), inauguramos um curso especializado em instalações hidráulicas, oferecendo uma jornada enriquecedora para todos os participantes. Durante esse curso abrangente, os alunos adquiriram habilidades valiosas, dominando técnicas cruciais, como manipulação de água fria e quente, instalação de tubulações de cobre, CPVC e PPR. Além disso, capacitaram-se na leitura básica de projetos, garantindo uma formação completa e pronta para os desafios do setor. Junte-se a nós para construir um futuro sólido e sustentável na área das instalações hidráulicas.
-               </p>
+        <div class="col-12 text-center my-5">
+            <h3>
+                Explorando horizontes e construindo futuros através de nossos cursos transformadores
+            </h3>
         </div>
-        <figure class="pt-5 ps-5 ms-3 mt-4 col-4">
-            <img class="rounded-5" src="./assets/img/cursos/hidraulica.jpg" width="350px" height="350px" alt="">
-        </figure>
-        <div class="col-6"> 
-               <h4 class="pt-5 mt-4 text-center">
+
+        <div class="col-lg-6">
+            <figure class="ms-3 mt-2 revealing-image">
+                <img class="rounded-5" src="./assets/img/cursos/hidraulica.jpg" width="350px" height="350px" alt="">
+            </figure>
+        </div>
+
+        <div class="col-lg-6">
+            <h4 class="pt-2 mt-2 text-center">
                 Instalações Hidráulicas
-               </h4>
-               <p class="pt-3 text-center">
+            </h4>
+            <p class="pt-1 text-center">
                 Em agosto de 2022, na vibrante cidade de Novo Gama (GO), inauguramos um curso especializado em instalações hidráulicas, oferecendo uma jornada enriquecedora para todos os participantes. Durante esse curso abrangente, os alunos adquiriram habilidades valiosas, dominando técnicas cruciais, como manipulação de água fria e quente, instalação de tubulações de cobre, CPVC e PPR. Além disso, capacitaram-se na leitura básica de projetos, garantindo uma formação completa e pronta para os desafios do setor. Junte-se a nós para construir um futuro sólido e sustentável na área das instalações hidráulicas.
-               </p>
+            </p>
+        </div>
+
+        <div class="col-lg-6">
+            <figure class="ms-3 mt-2 revealing-image">
+                <img class="rounded-5" src="./assets/img/cursos/eletricidade.jpg" width="350px" height="350px" alt="">
+            </figure>
+        </div>
+
+        <div class="col-lg-6">
+            <h4 class="pt-2 mt-2 text-center">
+                Eletricidade Residencial
+            </h4>
+            <p class="pt-1 text-center">
+                Em abril de 2022, iniciamos uma jornada de iluminação e conhecimento em eletricidade residencial na acolhedora cidade de Novo Gama (GO). Este curso, projetado para capacitar indivíduos na arte da eletricidade, ofereceu 40 horas de aprendizado prático e teórico. Nossos participantes mergulharam nos fundamentos da eletricidade residencial, adquirindo habilidades essenciais para instalações seguras, diagnósticos de problemas elétricos e compreensão profunda de circuitos residenciais. Venha fazer parte da energia transformadora desse curso, construindo competências fundamentais para o universo elétrico residencial.
+            </p>
+        </div>
+
+        <div class="col-lg-6">
+            <figure class="ms-3 mt-2 revealing-image">
+                <img class="rounded-5" src="./assets/img/cursos/violao.jpg" width="350px" height="350px" alt="">
+            </figure>
+        </div>
+
+        <div class="col-lg-6">
+            <h4 class="pt-2 mt-2 text-center">
+                Aulas de Violão
+            </h4>
+            <p class="pt-1 text-center">
+                Em março de 2022, iniciamos uma jornada musical no coração do bairro América do Sul, na cidade de Novo Gama (GO), oferecendo um curso de violão voltado para os moradores locais. Hoje, celebramos com alegria a conclusão bem-sucedida desse curso, onde cada estudante trilhou um caminho de descobertas musicais. Superando desafios, os participantes agora não apenas tocam acordes, mas criam melodias que ecoam por suas vidas e comunidade. Parabéns a todos os graduados por essa conquista harmoniosa, que ressoará em suas vidas como uma melodia de sucesso e realização.
+            </p>
+        </div>
+
+        <div class="col-lg-6">
+            <figure class="ms-3 mt-2 revealing-image">
+                <img class="rounded-5" src="./assets/img/cursos/alfabetizacao.jpg" width="350px" height="350px" alt="">
+            </figure>
+        </div>
+
+        <div class="col-lg-6">
+            <h4 class="pt-2 mt-2 text-center">
+                Alfabetização para Adultos
+            </h4>
+            <p class="pt-1 text-center">
+                Em fevereiro de 2022, lançamos um curso de alfabetização dedicado a adultos que não tiveram a chance de estudar na infância, na cidade acolhedora de Novo Gama (GO). Hoje, celebramos com orgulho a conclusão bem-sucedida deste curso, onde cada participante percorreu um caminho único em direção à alfabetização. Superando desafios e abraçando o aprendizado, esses adultos agora carregam consigo o poder transformador das palavras e a confiança para enfrentar novos horizontes. Essa jornada de conhecimento não é apenas um marco, mas o início de novas oportunidades e conquistas. Parabéns a todos os formandos por esse significativo passo em direção ao empoderamento através da educação.
+            </p>
         </div>
     </article>
 </section>
