--- a/src/app/home/cursos/cursos.component.css
+++ b/src/app/home/cursos/cursos.component.css
@@ -1,7 +1,27 @@
+.revealing-image {
+    view-timeline-name: --revealing-images;
+    view-timeline-axis: block;
+    animation: linear images both;
+    animation-timeline: --revealing-images;
+    animation-range: entry 25% cover 30%;
+}
+
 img {
-    box-shadow: rgba(0, 255, 145, 0.3) 55px 4px 50px -4px;
+    box-shadow: rgba(0, 255, 145, 0.3) 30px 4px 30px -4px;
 }
 
 h3, h4 {
     font-family: 'Lilita One', sans-serif;
+}
+
+@keyframes images {
+    from {
+        opacity: 0;
+        clip-path: inset(45% 20% 45% 20%);
+    }
+
+    to {
+        opacity: 1;
+        clip-path: inset(0% 0% 0% 0%);
+    }
 }
