arrumei algumas coisas

--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -5,14 +5,14 @@
                 Explorando horizontes e construindo futuros através de nossos cursos transformadores
             </h3>
         </div>
-
-        <div class="col-lg-6">
-            <figure class="ms-3 mt-2 revealing-image">
+        
+        <div class="col-lg-6 d-flex justify-content-center">
+            <figure class="ms-3 mt-2 mb-5 revealing-image">
                 <img class="rounded-5" src="./assets/img/cursos/hidraulica.jpg" width="350px" height="350px" alt="">
             </figure>
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-lg-6 pt-5">
             <h4 class="pt-2 mt-2 text-center">
                 Instalações Hidráulicas
             </h4>
@@ -21,13 +21,13 @@
             </p>
         </div>
 
-        <div class="col-lg-6">
-            <figure class="ms-3 mt-2 revealing-image">
+        <div class="col-lg-6 d-flex justify-content-center">
+            <figure class="ms-3 mt-2 mb-5 revealing-image">
                 <img class="rounded-5" src="./assets/img/cursos/eletricidade.jpg" width="350px" height="350px" alt="">
             </figure>
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-lg-6 pt-5">
             <h4 class="pt-2 mt-2 text-center">
                 Eletricidade Residencial
             </h4>
@@ -36,13 +36,13 @@
             </p>
         </div>
 
-        <div class="col-lg-6">
-            <figure class="ms-3 mt-2 revealing-image">
+        <div class="col-lg-6 d-flex justify-content-center">
+            <figure class="ms-3 mt-2 mb-5 revealing-image">
                 <img class="rounded-5" src="./assets/img/cursos/violao.jpg" width="350px" height="350px" alt="">
             </figure>
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-lg-6 pt-5">
             <h4 class="pt-2 mt-2 text-center">
                 Aulas de Violão
             </h4>
@@ -51,13 +51,13 @@
             </p>
         </div>
 
-        <div class="col-lg-6">
-            <figure class="ms-3 mt-2 revealing-image">
+        <div class="col-lg-6 d-flex justify-content-center">
+            <figure class="ms-3 mt-2 mb-5 revealing-image">
                 <img class="rounded-5" src="./assets/img/cursos/alfabetizacao.jpg" width="350px" height="350px" alt="">
             </figure>
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-lg-6 pt-5">
             <h4 class="pt-2 mt-2 text-center">
                 Alfabetização para Adultos
             </h4>
