--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -1,10 +1,10 @@
 <section class="container d-flex flex-column position-relative primeira">
     <article class="mt-5 pt-4 row">
-        <div class="col-md-5 text-center"> <!-- Substitua col-sm-5 por col-md-5 e adicione text-center -->
-            <h1 class="">Transformando vidas, <br> construindo futuros. <br>Juntos pela comunidade!</h1>
+        <div class="col-lg-6 pt-5 text-center"> <!-- Substitua col-sm-5 por col-md-5 e adicione text-center -->
+            <h1 class="pt-4">Transformando vidas, <br> construindo futuros. <br>Juntos pela comunidade!</h1>
             <p class="pt-4">O Instituto de Assistência Comunitária, estabelecido em 2020, é dedicado a apoiar aqueles enfrentando dificuldades, com foco em alimentação e famílias afetadas pelo uso de drogas. Oferece ajuda alimentar e suporte emocional. Além disso, promove o desenvolvimento infantil por meio de atividades como aulas de xadrez e jiu-jitsu, buscando criar uma comunidade resiliente desde sua fundação, impactando positivamente vidas.</p>
         </div>
-        <figure class="col-md-3 primeira-imagem image-fluid"> <!-- Substitua col-sm-3 por col-md-3 -->
+        <figure class="col-lg-6 mb-3 primeira-imagem image-fluid justify-content-center d-flex"> <!-- Substitua col-sm-3 por col-md-3 -->
             <img id="efeito-imagem" src="./assets/img/foto1.jpg" width="500" height="500" alt="foto da galera do REFAM">
         </figure>
     </article>
@@ -12,7 +12,7 @@
 
 <section>
     <article>
-        <h1 class="text-center pb-2">
+        <h1 class="text-center pb-2 sem-animaçao">
             Algumas atividades do REFAM
         </h1>
         <div class="container my-5">
@@ -64,44 +64,44 @@
         Durante alguns anos viemos ajudando os familiares do Novo Gama
     </h3>
 
-    <div class="container d-flex justify-content-center align-items-center pb-3 mb-4">
-        <div id="carouselExampleCaptions" class="carousel slide">
+    <div class="container-fluid d-flex justify-content-center align-items-center pb-3 mb-4">
+        <div id="carouselExampleCaptions" class="carousel slide w-75"> <!-- Aumentei a largura para 75% -->
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner rounded-4">
-              <div class="carousel-item active">
-                <img src="./assets/img/carrossel/carrossel.jpg" width="500px" height="700px" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                <div class="carousel-item active">
+                    <img src="./assets/img/carrossel/carrossel.jpg" class="d-block w-100" alt="First Slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/carrossel/carrossel2.jpg" width="500px" height="700px" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                <div class="carousel-item">
+                    <img src="./assets/img/carrossel/carrossel2.jpg" class="d-block w-100" alt="Second Slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/carrossel/carrossel3.jpg" width="500px" height="700px" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                <div class="carousel-item">
+                    <img src="./assets/img/carrossel/carrossel3.jpg" class="d-block w-100" alt="Third Slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
                 </div>
-              </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
     </div>
 </section>
