--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,29 +1,29 @@
 <nav class="navbar navbar-expand-lg" [ngClass]="{'fixed-top': navbarScrolled, 'bg-transparent': !navbarScrolled, 'navbar-scrolled': navbarScrolled}">
-  <div class="container-fluid d-flex">
-      <div class="col-md-5">
-          <a class="navbar-brand" href="#">
-              <img src="favicon.ico" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-              Projeto REFAM
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-      </div>
-      <div class="collapse navbar-collapse d-flex" id="navbarNav">
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Sobre</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Contatos</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-          </ul>
-      </div>
-  </div>
-</nav>
+    <div class="container-fluid">
+        <div class="col-md-5">
+            <a class="navbar-brand" href="#">
+                <img src="favicon.ico" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                Projeto REFAM
+            </a>
+            <button class="navbar-toggler end-0 me-4 position-fixed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Sobre</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cursos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contatos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+  </nav>
