arrumei um paragrafo

--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -1,18 +1,18 @@
 <section class="container d-flex flex-column position-relative primeira">
     <article class="mt-5 pt-4 row">
-        <div class="col-lg-6 pt-5 text-center"> <!-- Substitua col-sm-5 por col-md-5 e adicione text-center -->
+        <div class="col-lg-6 pt-5 text-center"> <!-- Substituí col-sm-5 por col-lg-6 e adicionei text-center -->
             <h1 class="pt-4">Transformando vidas, <br> construindo futuros. <br>Juntos pela comunidade!</h1>
             <p class="pt-4">O Instituto de Assistência Comunitária, estabelecido em 2020, é dedicado a apoiar aqueles enfrentando dificuldades, com foco em alimentação e famílias afetadas pelo uso de drogas. Oferece ajuda alimentar e suporte emocional. Além disso, promove o desenvolvimento infantil por meio de atividades como aulas de xadrez e jiu-jitsu, buscando criar uma comunidade resiliente desde sua fundação, impactando positivamente vidas.</p>
         </div>
-        <figure class="col-lg-6 mb-3 primeira-imagem image-fluid justify-content-center d-flex"> <!-- Substitua col-sm-3 por col-md-3 -->
-            <img id="efeito-imagem" src="./assets/img/foto1.jpg" width="500" height="500" alt="foto da galera do REFAM">
+        <figure class="col-lg-6 mb-3 primeira-imagem justify-content-center d-flex"> <!-- Substituí col-sm-3 por col-lg-6 -->
+            <img class="img-fluid" id="efeito-imagem" src="./assets/img/foto1.jpg" width="500" height="500" alt="foto da galera do REFAM">
         </figure>
     </article>
 </section>
 
 <section>
     <article>
-        <h1 class="text-center pb-2 sem-animaçao">
+        <h1 class="text-center pb-2 mt-5 sem-animaçao">
             Algumas atividades do REFAM
         </h1>
         <div class="container my-5">
