--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -1,7 +1,7 @@
 <section class="container">
     <article class="row">
         <div class="col-12 text-center my-5">
-            <h3>
+            <h3 id="cursos">
                 Explorando horizontes e construindo futuros através de nossos cursos transformadores
             </h3>
         </div>
@@ -67,8 +67,12 @@
         </div>
     </article>
 </section>
-<section>
+<section id="contatos">
     <article>
-        
+        <div class="col-12 text-center my-5">
+            <h3>
+                Também temos algumas atividades para as crianças!
+            </h3>
+        </div>
     </article>
 </section>
