--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -1,3 +1,5 @@
+<!-- cabeçario -->
+
 <section class="container d-flex flex-column position-relative primeira">
     <article class="mt-5 pt-4 row">
         <div class="col-lg-6 pt-5 text-center"> <!-- Substituí col-sm-5 por col-lg-6 e adicionei text-center -->
@@ -9,6 +11,16 @@
         </figure>
     </article>
 </section>
+
+<!-- cargos do Instituto -->
+
+<section class="container">
+ <h2 class="text-center">
+    Pessoas que estão a frente do Instituto
+ </h2>
+</section>
+
+<!-- Resumo de atividades do REFAM -->
 
 <section>
     <article>
@@ -58,6 +70,8 @@
         </div>
     </article>
 </section>
+
+<!-- carrossel -->
 
 <section>
     <h3 class="text-center pt-4 pb-4 mt-4 position-relative">
