--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -78,37 +78,15 @@
             O projeto 'Força Máxima' é uma iniciativa única que combina a disciplina do Jiu-Jitsu e a estratégia do xadrez para promover o desenvolvimento integral de jovens de 6 a 17 anos. Com inscrições abertas na Quadra 12, Lote 04, Jardim Paiva, Novo Gama, essa oportunidade oferece benefícios incomparáveis. Além de ensinar técnicas essenciais de autodefesa, o Jiu-Jitsu desenvolve valores como respeito, autocontrole e trabalho em equipe. Já o xadrez, um jogo de mente, aprimora habilidades cognitivas, tomada de decisão e raciocínio estratégico. Juntos, esses programas proporcionam uma abordagem holística, preparando os jovens para enfrentar os desafios da vida com confiança e determinação. Inscreva-se agora e participe dessa jornada transformadora!
         </h6>
         
-        <div class="d-flex col-lg-6 justify-content-center">
+        <div class="col-lg-6 d-flex justify-content-center mt-2 mb-2">
             <figure class="revealing-image">
                 <img class="rounded-5" src="./assets/img/cursos/jiujitsu.jpg" alt="" width="400" height="400">
             </figure>
         </div>
-        <div class="d-flex col-lg-6 justify-content-center">
+        <div class="col-lg-6 d-flex justify-content-center mt-2 mb-2">
             <figure class="revealing-image">
                 <img class="rounded-5" src="./assets/img/cursos/xadrez.jpg" alt="" width="400" height="400">
             </figure>
         </div>
-
-        <div id="carouselExampleInterval" class="carousel slide mt-5" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="10000">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
     </article>
 </section>
