--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -42,7 +42,7 @@
                     <li class="list-inline-item pe-5">
                         <div class="d-flex flex-column align-items-center">
                             <figure class="pb-3">
-                                <img id="efeito-imagem" src="./assets/img/jui-jutsu.jpg" width="200" height="200" alt="jiu-jitsu">
+                                <img id="efeito-imagem" src="./assets/img/jiu-jitsu.jpg" width="200" height="200" alt="jiu-jitsu">
                             </figure>
                             <span>Jiu-Jitsu</span>
                         </div>
