--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -14,10 +14,19 @@
 
 <!-- cargos do Instituto -->
 
-<section class="container">
- <h2 class="text-center">
-    Pessoas que estão a frente do Instituto
- </h2>
+<section class="container d-flex flex-column position-relative primeira">
+    <article class="mt-5 row">
+        <figure class="col-lg-6 mb-3 primeira-imagem justify-content-center d-flex"> <!-- Substituí col-sm-3 por col-lg-6 -->
+            <img class="img-fluid" id="efeito-imagem" src="./assets/img/sales.jpg" width="400" height="400" alt="foto da galera do REFAM">
+        </figure>
+        <div class="col-lg-6 pt-5 text-center"> <!-- Substituí col-sm-5 por col-lg-6 e adicionei text-center -->
+            <h1 class="pt-4">Acreditar Sempre!!!!</h1>
+            <p class="pt-4">
+                Sales Rodrigues, também conhecido como Pastor Sales, é o visionário fundador de uma das maiores organizações de solidariedade em Novo Gama. Sua nobre iniciativa teve início em 2009 por meio do "Movimento Crack é Possível Vencer com Jesus", dedicado incansavelmente ao combate ao uso abusivo de drogas ilícitas. Esse movimento inspirador culminou na criação do Instituto REFAM, oficialmente registrado em 2012.
+                
+                Desde então, o Instituto REFAM tem desempenhado um papel crucial, impactando positivamente inúmeras famílias em toda a região do Entorno e no Distrito Federal. Sua sede, estrategicamente localizada no município de Novo Gama, serve como ponto de partida para uma jornada contínua de transformação social.</p>
+        </div>
+    </article>
 </section>
 
 <!-- Resumo de atividades do REFAM -->
