--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -1,6 +1,6 @@
 <!-- cabeçario -->
 
-<section class="container d-flex flex-column position-relative primeira">
+<section class="container d-flex flex-column position-relative primeira mb-5 pb-4">
     <article class="mt-5 pt-4 row">
         <div class="col-lg-6 pt-5 text-center"> <!-- Substituí col-sm-5 por col-lg-6 e adicionei text-center -->
             <h1 class="pt-4">Transformando vidas, <br> construindo futuros. <br>Juntos pela comunidade!</h1>
@@ -14,20 +14,27 @@
 
 <!-- cargos do Instituto -->
 
-<section class="container d-flex flex-column position-relative primeira">
+<section class="container d-flex flex-column position-relative mb-3 pb-4">
     <article class="mt-5 row">
-        <figure class="col-lg-6 mb-3 primeira-imagem justify-content-center d-flex"> <!-- Substituí col-sm-3 por col-lg-6 -->
+        <figure class="col-lg-6 mb-3 primeira-imagem justify-content-center d-flex">
             <img class="img-fluid" id="efeito-imagem" src="./assets/img/sales.jpg" width="400" height="400" alt="foto da galera do REFAM">
         </figure>
-        <div class="col-lg-6 pt-5 text-center"> <!-- Substituí col-sm-5 por col-lg-6 e adicionei text-center -->
+        <div class="col-lg-6 pt-5 text-center position-relative">
+            <div class="d-flex position-absolute z-n1 justify-content-center align-items-center" style="width: 100%; height: 100%;">
+                <img class="img-fluid" src="./assets/img/background/circulo.png" width="450" height="450" alt="">
+            </div>
+            <!-- Coloquei a imagem do círculo dentro de um contêiner flexível para centralização -->
             <h1 class="pt-4">Acreditar Sempre!!!!</h1>
             <p class="pt-4">
                 Sales Rodrigues, também conhecido como Pastor Sales, é o visionário fundador de uma das maiores organizações de solidariedade em Novo Gama. Sua nobre iniciativa teve início em 2009 por meio do "Movimento Crack é Possível Vencer com Jesus", dedicado incansavelmente ao combate ao uso abusivo de drogas ilícitas. Esse movimento inspirador culminou na criação do Instituto REFAM, oficialmente registrado em 2012.
                 
-                Desde então, o Instituto REFAM tem desempenhado um papel crucial, impactando positivamente inúmeras famílias em toda a região do Entorno e no Distrito Federal. Sua sede, estrategicamente localizada no município de Novo Gama, serve como ponto de partida para uma jornada contínua de transformação social.</p>
+                Desde então, o Instituto REFAM tem desempenhado um papel crucial, impactando positivamente inúmeras famílias em toda a região do Entorno e no Distrito Federal. Sua sede, estrategicamente localizada no município de Novo Gama, serve como ponto de partida para uma jornada contínua de transformação social.
+            </p>
         </div>
     </article>
 </section>
+
+
 
 <!-- Resumo de atividades do REFAM -->
 
