--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,7 @@ body {
     background: linear-gradient(90deg, rgb(121, 204, 255), rgb(82, 82, 255));
     grid-template-rows: 1fr auto;
 }
+
+p {
+    font-family: 'Roboto', sans-serif;
+}
