--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -3,6 +3,9 @@
 <section class="container d-flex flex-column position-relative primeira mb-5 pb-4">
     <article class="mt-5 pt-4 row">
         <div class="col-lg-6 pt-5 text-center"> <!-- Substituí col-sm-5 por col-lg-6 e adicionei text-center -->
+            <div class="position-absolute z-n1 d-flex justify-content-center ms-5">
+                <img class="img-fluid" src="./assets/img/background/varios.png" width="500" height="500" alt="">
+            </div>
             <h1 class="pt-4">Transformando vidas, <br> construindo futuros. <br>Juntos pela comunidade!</h1>
             <p class="pt-4">O Instituto de Assistência Comunitária, estabelecido em 2020, é dedicado a apoiar aqueles enfrentando dificuldades, com foco em alimentação e famílias afetadas pelo uso de drogas. Oferece ajuda alimentar e suporte emocional. Além disso, promove o desenvolvimento infantil por meio de atividades como aulas de xadrez e jiu-jitsu, buscando criar uma comunidade resiliente desde sua fundação, impactando positivamente vidas.</p>
         </div>
@@ -21,10 +24,10 @@
         </figure>
         <div class="col-lg-6 pt-5 text-center position-relative">
             <div class="d-flex position-absolute z-n1 justify-content-center align-items-center" style="width: 100%; height: 100%;">
-                <img class="img-fluid" src="./assets/img/background/circulo.png" width="450" height="450" alt="">
+                <img src="./assets/img/background/circulo.png" width="420" height="420" alt="">
             </div>
             <!-- Coloquei a imagem do círculo dentro de um contêiner flexível para centralização -->
-            <h1 class="pt-4">Acreditar Sempre!!!!</h1>
+            <h1 class="pt-5 mt-4">Acreditar Sempre!!!!</h1>
             <p class="pt-4">
                 Sales Rodrigues, também conhecido como Pastor Sales, é o visionário fundador de uma das maiores organizações de solidariedade em Novo Gama. Sua nobre iniciativa teve início em 2009 por meio do "Movimento Crack é Possível Vencer com Jesus", dedicado incansavelmente ao combate ao uso abusivo de drogas ilícitas. Esse movimento inspirador culminou na criação do Instituto REFAM, oficialmente registrado em 2012.
                 
@@ -33,8 +36,6 @@
         </div>
     </article>
 </section>
-
-
 
 <!-- Resumo de atividades do REFAM -->
 
