--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -1,6 +1,6 @@
 <section class="container">
     <article class="row">
-        <div class="col-12 text-center my-5">
+        <div class="col-12 text-center my-5 text-decoration-underline">
             <h3 id="cursos">
                 Explorando horizontes e construindo futuros através de nossos cursos transformadores
             </h3>
@@ -13,7 +13,10 @@
         </div>
 
         <div class="col-lg-6 pt-5">
-            <h4 class="pt-2 mt-2 text-center">
+            <div class="position-absolute z-n1 d-flex justify-content-center ms-5">
+                <img class="img-fluid" src="./assets/img/background/quadradinhos.png" width="550" height="550" alt="">
+            </div>
+            <h4 class="pt-2 mt-2 text-center text-decoration-underline">
                 Instalações Hidráulicas
             </h4>
             <p class="pt-1 text-center">
@@ -28,6 +31,9 @@
         </div>
 
         <div class="col-lg-6 pt-5">
+            <div class="position-absolute z-n1 d-flex justify-content-center ms-5">
+                <img class="img-fluid" src="./assets/img/background/quadradinhos2.png" width="550" height="550" alt="">
+            </div>
             <h4 class="pt-2 mt-2 text-center">
                 Eletricidade Residencial
             </h4>
