--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -40,8 +40,8 @@
 <!-- Resumo de atividades do REFAM -->
 
 <section>
-    <article>
-        <h1 class="text-center pb-2 mt-5 sem-animaçao">
+    <article class="mt-4 pt-3">
+        <h1 class="text-center pb-2 mt-5 sem-animaçao text-decoration-underline">
             Algumas atividades do REFAM
         </h1>
         <div class="container my-5">
