--- a/src/app/home/cursos/cursos.component.html
+++ b/src/app/home/cursos/cursos.component.html
@@ -31,10 +31,10 @@
         </div>
 
         <div class="col-lg-6 pt-5">
-            <div class="position-absolute z-n1 d-flex justify-content-center ms-5">
+            <div class="position-absolute z-n1 d-flex justify-content-center ms-5 opacity-75">
                 <img class="img-fluid" src="./assets/img/background/quadradinhos2.png" width="550" height="550" alt="">
             </div>
-            <h4 class="pt-2 mt-2 text-center">
+            <h4 class="pt-2 mt-2 text-center text-decoration-underline">
                 Eletricidade Residencial
             </h4>
             <p class="pt-1 text-center">
@@ -49,7 +49,10 @@
         </div>
 
         <div class="col-lg-6 pt-5">
-            <h4 class="pt-2 mt-2 text-center">
+            <div class="position-absolute z-n1 d-flex justify-content-center ms-5 opacity-75">
+                <img class="img-fluid" src="./assets/img/background/quadradinhos3.png" width="550" height="550" alt="">
+            </div>
+            <h4 class="pt-2 mt-2 text-center text-decoration-underline">
                 Aulas de Violão
             </h4>
             <p class="pt-1 text-center">
@@ -64,7 +67,10 @@
         </div>
 
         <div class="col-lg-6 pt-5">
-            <h4 class="pt-2 mt-2 text-center">
+            <div class="position-absolute z-n1 d-flex justify-content-center ms-5">
+                <img class="img-fluid" src="./assets/img/background/quadradinhos4.png" width="550" height="550" alt="">
+            </div>
+            <h4 class="pt-2 mt-2 text-center text-decoration-underline">
                 Alfabetização para Adultos
             </h4>
             <p class="pt-1 text-center">
