--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -88,6 +88,18 @@
     </article>
 </section>
 
+<!-- ajuda a dependentes quimicos -->
+
+<section class="container">
+    <h3>
+        Parcerias com comunidades terapêuticas
+    </h3>
+
+    <h2>
+        Tratamento para dependências químicas com encaminhamento para internações em comunidades terapêuticas, com mais de 100 pessoas atendidas.
+    </h2>
+</section>
+
 <!-- carrossel -->
 
 <section>
