--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -98,6 +98,7 @@
     <h2>
         Tratamento para dependências químicas com encaminhamento para internações em comunidades terapêuticas, com mais de 100 pessoas atendidas.
     </h2>
+    <img src="" alt="">
 </section>
 
 <!-- carrossel -->
