--- a/src/app/home/sobre/sobre.component.html
+++ b/src/app/home/sobre/sobre.component.html
@@ -98,7 +98,14 @@
     <h2>
         Tratamento para dependências químicas com encaminhamento para internações em comunidades terapêuticas, com mais de 100 pessoas atendidas.
     </h2>
-    <img src="" alt="">
+    <img src="./assets/img/dependencia/dependencia.jpg" alt="" width="200" height="200">
+    <img src="./assets/img/dependencia/dependencia2.jpg" alt="" width="200" height="200">
+    <img src="./assets/img/dependencia/dependencia3.jpg" alt="" width="200" height="200">
+    <img src="./assets/img/dependencia/dependencia4.jpg" alt="" width="200" height="200">
+    <img src="./assets/img/dependencia/dependencia5.jpg" alt="" width="200" height="200">
+    <img src="./assets/img/dependencia/dependencia6.jpg" alt="" width="200" height="200">
+    <img src="./assets/img/dependencia/dependencia7.jpg" alt="" width="200" height="200">
+
 </section>
 
 <!-- carrossel -->
